Added fortran supoort. This code may cause memory leak, which will be fixed soon.

--- a/trace_collect/Makefile
+++ b/trace_collect/Makefile
@@ -1,10 +1,14 @@
-MPIPATH		= /your/path/to/mpich2-1.4/
-INSTALL_DIR	= /your/path/to/mpich2-install/
+MPIPATH		= /your/path/to/mpich2-configured-source-code/ 
+INSTALL_DIR	= /your/path/to/mpich2-install/ 
 
 CXX		= gcc
+F77     = gfortran
 
 TRC_SRCS	= $(wildcard *.c)
 TRC_OBJS	= $(TRC_SRCS:.c=.o)
+
+F77_SRCS    = $(wildcard *.f)
+F77_OBJS    = $(F77_SRCS:.f=.o)
 
 DFLAGS		:= $(DFLAGS) -DFORTRANDOUBLEUNDERSCORE
 DFLAGS		:= $(DFLAGS) -D_LARGEFILE64_SOURCE
@@ -24,13 +28,18 @@ CXXFLAGS	:= $(CXXFLAGS) -I${MPIPATH}/src/include
 CXXFLAGS	:= $(CXXFLAGS) -I${MPIPATH}/src/mpl/include
 CXXFLAGS	:= $(CXXFLAGS) -I${MPIPATH}/src/util/wrappers
 
+F77FLAGS	:=
+
 .c.o:
 	$(CXX) -c $(CXXFLAGS) $(DFLAGS) $<
+	
+.f.o:
+	$(F77) -c $(F77FLAGS) $(DFLAGS) $<
 
 all:	trace
 
-trace: $(TRC_OBJS)
-	ar rlc libiosig.a $(TRC_OBJS)
+trace: $(TRC_OBJS) $(F77_OBJS)
+	ar rlc libiosig.a $(TRC_OBJS) $(F77_OBJS)
 	@echo "... compile comleted."
 
 install: trace
