--- a/examples/execution_trace/Makefile
+++ b/examples/execution_trace/Makefile
@@ -1,16 +1,12 @@
+IOSIG_LIB_PATH=$(HOME)/install/lib
 
-trace.o: trace.c
-	gcc -c -o trace.o trace.c
-
-all: main
-
-main: main.o trace.o
-	gcc main.o trace.o -o main
+main: main.o 
+	gcc main.o -o main -L${IOSIG_LIB_PATH} -liosig
 
 
 main.o: main.c
 	gcc -finstrument-functions -g -c -o main.o main.c
 
 clean:
-	rm *.o
+	rm *.o *.out
 
