Continue working on posix tracing.

--- a/src/examples/mpiio_c/Makefile.config
+++ b/src/examples/mpiio_c/Makefile.config
@@ -42,9 +42,9 @@ NCMPI_DIR.IRIX64 =
 # LINUX SETTINGS #
 ##################
 CC.Linux = $(HOME)/install/bin/mpicc  
-CCFLAGS.Linux = -g -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 
-#CCFLAGS.Linux = -g -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -finstrument-functions
-LDFLAGS.Linux = -L$(HOME)/install/lib/ -liosig 
+#CCFLAGS.Linux = -g -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 
+CCFLAGS.Linux = -g -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -finstrument-functions
+LDFLAGS.Linux = -L../../collect -liosig 
 
 
 ##################
