--- a/src/collect/Makefile.test
+++ b/src/collect/Makefile.test
@@ -1,48 +1,56 @@
 MPIPATH		= /export/home/yyin/common/program_files/mpich2-1.4.1p1
 INSTALL_DIR	= /export/home/yyin/install
 
-CXX		= gcc
-F77             = gfortran
+C_COMPILER	= gcc
+F_COMPILER	= gfortran
+
+V = 0
+AT_0 := @
+AT_1 :=
+AT = $(AT_$(V))
+CC_0 = $(AT)echo "CC $<..."; $(C_COMPILER)
+CC_1 = $(C_COMPILER)
+CC = $(CC_$(V))
+FC_0 = $(AT)echo "FC $<..."; $(F_COMPILER)
+FC_1 = $(F_COMPILER)
+FC = $(FC_$(V))
 
 TRC_SRCS	= $(wildcard *.c)
 TRC_OBJS	= $(TRC_SRCS:.c=.o)
 
-F77_SRCS    = $(wildcard *.f)
-F77_OBJS    = $(F77_SRCS:.f=.o)
+FC_SRCS    = $(wildcard *.f)
+FC_OBJS    = $(FC_SRCS:.f=.o)
 
-DFLAGS		:= $(DFLAGS) -DFORTRANDOUBLEUNDERSCORE
-DFLAGS		:= $(DFLAGS) -D_LARGEFILE64_SOURCE
-DFLAGS		:= $(DFLAGS) -D_FILE_OFFSET_BITS=64
-DFLAGS		:= $(DFLAGS) -DHAVE_ROMIOCONF_H
+DFLAGS	:= $(DFLAGS) -DFORTRANDOUBLEUNDERSCORE
+DFLAGS	:= $(DFLAGS) -D_LARGEFILE64_SOURCE
+DFLAGS	:= $(DFLAGS) -D_FILE_OFFSET_BITS=64
+DFLAGS	:= $(DFLAGS) -DHAVE_ROMIOCONF_H
 
-#CXXFLAGS	:= -O
-CXXFLAGS	:= $(CXXFLAGS) -I${INSTALL_DIR}/include
-CXXFLAGS	:= $(CXXFLAGS) -I${MPIPATH}/src/mpid/ch3/include                 # mpidpost.h
-CXXFLAGS	:= $(CXXFLAGS) -I${MPIPATH}/src/mpid/common/datatype             # mpid_datatype.h
-CXXFLAGS	:= $(CXXFLAGS) -I${MPIPATH}/src/mpid/ch3/channels/sock/include   # mpidi_ch3_post.h
-CXXFLAGS	:= $(CXXFLAGS) -I${MPIPATH}/src/mpid/common/sock                 # for older version of mpich2
-CXXFLAGS	:= $(CXXFLAGS) -I${MPIPATH}/src/mpid/common/sock/poll            # for older version of mpich2
-CXXFLAGS	:= $(CXXFLAGS) -I${MPIPATH}/src/mpi/romio/adio/include           # adio.h
-CXXFLAGS	:= $(CXXFLAGS) -I${MPIPATH}/src/include                          # mpiimpl.h
-CXXFLAGS	:= $(CXXFLAGS) -I${MPIPATH}/src/mpl/include                      # mpl.h
-CXXFLAGS	:= $(CXXFLAGS) -I${MPIPATH}/src/util/wrappers                    # mpiu_process_wrappers.h
-CXXFLAGS	:= $(CXXFLAGS) -I${MPIPATH}/src/mpi/romio/mpi-io                 # mpioimpl.h
-#CXXFLAGS	:= $(CXXFLAGS) -O -I. -I${MPIPATH}/src/mpi/romio/mpi-io
-#CXXFLAGS	:= $(CXXFLAGS) -I${MPIPATH}/src/binding/f77
+CFLAGS	:= $(CFLAGS) -I${INSTALL_DIR}/include
+CFLAGS	:= $(CFLAGS) -I${MPIPATH}/src/mpid/ch3/include                 # mpidpost.h
+CFLAGS	:= $(CFLAGS) -I${MPIPATH}/src/mpid/common/datatype             # mpid_datatype.h
+CFLAGS	:= $(CFLAGS) -I${MPIPATH}/src/mpid/ch3/channels/sock/include   # mpidi_ch3_post.h
+CFLAGS	:= $(CFLAGS) -I${MPIPATH}/src/mpid/common/sock                 # for older version of mpich2
+CFLAGS	:= $(CFLAGS) -I${MPIPATH}/src/mpid/common/sock/poll            # for older version of mpich2
+CFLAGS	:= $(CFLAGS) -I${MPIPATH}/src/mpi/romio/adio/include           # adio.h
+CFLAGS	:= $(CFLAGS) -I${MPIPATH}/src/include                          # mpiimpl.h
+CFLAGS	:= $(CFLAGS) -I${MPIPATH}/src/mpl/include                      # mpl.h
+CFLAGS	:= $(CFLAGS) -I${MPIPATH}/src/util/wrappers                    # mpiu_process_wrappers.h
+CFLAGS	:= $(CFLAGS) -I${MPIPATH}/src/mpi/romio/mpi-io                 # mpioimpl.h
 
-F77FLAGS	:=
+FCFLAGS	:=
 
 .c.o:
-	$(CXX) -c $(CXXFLAGS) $(DFLAGS) $<
+	$(CC) -c $(CFLAGS) $(DFLAGS) $<
 	
 .f.o:
-	$(F77) -c $(F77FLAGS) $(DFLAGS) $<
+	$(FC) -c $(FCFLAGS) $(DFLAGS) $<
 
 all:	trace
 
-trace: $(TRC_OBJS) $(F77_OBJS)
-	ar rlc libiosig.a $(TRC_OBJS) $(F77_OBJS)
-	@echo "... compile comleted."
+trace: $(TRC_OBJS) $(FC_OBJS)
+	@echo "Creating ligiosig.a"; ar rlc libiosig.a $(TRC_OBJS) $(FC_OBJS)
+	@echo "Comleted. Next, make install."
 
 install: trace
 	cp libiosig.a ${INSTALL_DIR}/lib
