--- a/src/examples/posix_io_c/Makefile
+++ b/src/examples/posix_io_c/Makefile
@@ -1,6 +1,6 @@
 IOSIG_LIB_PATH = ../../collect
 CFLAGS    += -finstrument-functions
-LDFLAGS   += -Wl,-wrap,fopen
+LDFLAGS   += -Wl,-wrap,fopen,-wrap,fclose,-wrap,fread,-wrap,fwrite,-wrap,fseek,-wrap,open,-wrap,close,-wrap,read,-wrap,write,-wrap,lseek
 LDFLAGS   += -L${IOSIG_LIB_PATH} -liosig
 
 simple_posix: simple_posix.o 
@@ -10,6 +10,6 @@ simple_posix: simple_posix.o
 simple_posix.o: simple_posix.c
 	gcc ${CFLAGS} -g -c -o simple_posix.o simple_posix.c
 
-clean:
-	rm *.o simple_posix myfile exe*.out trace*.out exe*.out.new
+clean::
+	rm *.o simple_posix myfile exe*.out trace*.out exe*.out.new posix*.out
 
