lseek is bug free so far. 64-bit operations not supported yet. Added more comments. off_t and size_t being used, instead of long int or unsigned long int.

--- a/src/examples/posix_io_c/Makefile
+++ b/src/examples/posix_io_c/Makefile
@@ -1,11 +1,10 @@
 IOSIG_LIB_PATH = ../../collect
-CFLAGS    += -finstrument-functions
+CFLAGS    += -w -finstrument-functions #-D_FILE_OFFSET_BITS=64
 LDFLAGS   += -Wl,-wrap,fopen,-wrap,fclose,-wrap,fread,-wrap,fwrite,-wrap,fseek,-wrap,open,-wrap,close,-wrap,read,-wrap,write,-wrap,lseek
-LDFLAGS   += -L${IOSIG_LIB_PATH} -liosig
+LDFLAGS   += -L${IOSIG_LIB_PATH} -liosig  #-D_FILE_OFFSET_BITS=64
 
 simple_posix: simple_posix.o 
 	gcc simple_posix.o -o simple_posix ${LDFLAGS}
-
 
 simple_posix.o: simple_posix.c
 	gcc ${CFLAGS} -g -c -o simple_posix.o simple_posix.c
