--- a/src/collect/Makefile.test
+++ b/src/collect/Makefile.test
@@ -21,6 +21,8 @@ TRC_OBJS	= $(TRC_SRCS:.c=.o)
 FC_SRCS    = $(wildcard *.f)
 FC_OBJS    = $(FC_SRCS:.f=.o)
 
+IOSIG_WRAP_FLAGS = -Wl,-wrap,fopen,-wrap,fopen64,-wrap,fclose,-wrap,fread,-wrap,fwrite,-wrap,fseek,-wrap,open,-wrap,close,-wrap,read,-wrap,write,-wrap,lseek,-wrap,lseek64,-wrap,open64
+
 DFLAGS	:= $(DFLAGS) -DFORTRANDOUBLEUNDERSCORE
 DFLAGS	:= $(DFLAGS) -D_LARGEFILE64_SOURCE
 DFLAGS	:= $(DFLAGS) -D_FILE_OFFSET_BITS=64
@@ -37,6 +39,8 @@ CFLAGS	:= $(CFLAGS) -I${MPIPATH}/src/include                          # mpiimpl.
 CFLAGS	:= $(CFLAGS) -I${MPIPATH}/src/mpl/include                      # mpl.h
 CFLAGS	:= $(CFLAGS) -I${MPIPATH}/src/util/wrappers                    # mpiu_process_wrappers.h
 CFLAGS	:= $(CFLAGS) -I${MPIPATH}/src/mpi/romio/mpi-io                 # mpioimpl.h
+CFLAGS	:= $(CFLAGS) -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64
+#CFLAGS	:= $(CFLAGS) $(IOSIG_WRAP_FLAGS)
 
 FCFLAGS	:=
 
