Now both mpiio_c and posix_io_c are error free. However, the offset values in trace files are abnormal. Also, openning one file for more than once will create multiple nodes in the book keeping list.

--- a/src/collect2/Makefile
+++ b/src/collect2/Makefile
@@ -29,6 +29,7 @@ DFLAGS	:= $(DFLAGS) -DHAVE_ROMIOCONF_H
 
 COMMON_CFLAGS	:= $(DFLAGS) -I${INSTALL_DIR}/include
 COMMON_CFLAGS	:= $(COMMON_CFLAGS) -I${INSTALL_DIR}/include
+COMMON_CFLAGS	:= $(COMMON_CFLAGS) -lpthread
 
 MPIIO_CFLAGS	:= $(MPIIO_CFLAGS) -I${MPIPATH}/src/mpid/ch3/include                 # mpidpost.h
 MPIIO_CFLAGS	:= $(MPIIO_CFLAGS) -I${MPIPATH}/src/mpid/common/datatype             # mpid_datatype.h
