--- a/src/examples/posix_io_c/Makefile
+++ b/src/examples/posix_io_c/Makefile
@@ -1,9 +1,10 @@
-IOSIG_LIB_PATH = ../../collect
+IOSIG_LIB_PATH = ../../collect2
 IOSIG_LDFLAGS = -Wl,-wrap,fopen,-wrap,fopen64,-wrap,fclose,-wrap,fread,-wrap,fwrite,-wrap,fseek,-wrap,open,-wrap,close,-wrap,read,-wrap,write,-wrap,lseek,-wrap,lseek64,-wrap,open64
 
 CFLAGS    += -w -finstrument-functions -D_FILE_OFFSET_BITS=64
-LDFLAGS   += $(IOSIG_LDFLAGS)
 LDFLAGS   += -L${IOSIG_LIB_PATH} -liosig  #-D_FILE_OFFSET_BITS=64
+LDFLAGS   += $(IOSIG_LDFLAGS)
+LDFLAGS   += -rdynamic
 
 simple_posix: simple_posix.o 
 	gcc simple_posix.o -o simple_posix ${LDFLAGS}
