--- a/src/examples/execution_trace/Makefile.iosig
+++ b/src/examples/execution_trace/Makefile.iosig
@@ -1,7 +1,7 @@
 #!/bin/bash
 
 IOSIG_LIB_PATH = ../../collect
-IOSIG_CFLAGS    += -w -finstrument-functions -D_FILE_OFFSET_BITS=64
+IOSIG_CFLAGS    += -w -finstrument-functions 
 IOSIG_LDFLAGS   += -L../../collect -liosig 
 IOSIG_LDFLAGS   += -Wl,-wrap,fopen,-wrap,fopen64,-wrap,fclose,-wrap,fread,-wrap,fwrite,-wrap,fseek,-wrap,open,-wrap,close,-wrap,read,-wrap,write,-wrap,lseek,-wrap,lseek64,-wrap,open64
 
