--- a/src/examples/mpiio_c/Makefile.iosig
+++ b/src/examples/mpiio_c/Makefile.iosig
@@ -3,7 +3,7 @@
 MPI_HOME     = /export/home/yyin/install
 CC           = mpicc
 
-IOSIG_CFLAGS   += -w -finstrument-functions -D_FILE_OFFSET_BITS=64
+IOSIG_CFLAGS   += -w -finstrument-functions 
 IOSIG_LDFLAGS  += -L../../collect -liosig
 IOSIG_LDFLAGS  += -Wl,-wrap,fopen,-wrap,fopen64,-wrap,fclose,-wrap,fread,-wrap,fwrite,-wrap,fseek,-wrap,open,-wrap,close,-wrap,read,-wrap,write,-wrap,lseek,-wrap,lseek64,-wrap,open64
 
