--- a/src/examples/IOR/Makefile.config
+++ b/src/examples/IOR/Makefile.config
@@ -46,7 +46,7 @@ CC.Linux = $(HOME)/install/bin/mpicc
 IOSIG_FLAGS = -Wl,-wrap,fopen,-wrap,fopen64,-wrap,fclose,-wrap,fread,-wrap,fwrite,-wrap,fseek,-wrap,open,-wrap,close,-wrap,read,-wrap,write,-wrap,lseek,-wrap,lseek64,-wrap,open64
 #IOSIG_FLAGS = -Wl,-wrap,fopen,-wrap,fopen64,-wrap,fclose,-wrap,fread,-wrap,fwrite,-wrap,fseek #,-wrap,open,-wrap,close,-wrap,read,-wrap,write,-wrap,lseek,-wrap,lseek64,-wrap,open64
 CCFLAGS.Linux = -g -D_LARGEFILE64_SOURCE -D_FILE_OFFSET_BITS=64 -finstrument-functions #$(IOSIG_FLAGS) 
-LDFLAGS.Linux = -L../../collect2 -liosig $(IOSIG_FLAGS)
+LDFLAGS.Linux = -L../../collect -liosig $(IOSIG_FLAGS)
 
 
 ##################
