--- a/src/examples/IOR/Makefile.iosig.config
+++ b/src/examples/IOR/Makefile.iosig.config
@@ -42,8 +42,11 @@ NCMPI_DIR.IRIX64 =
 # LINUX SETTINGS #
 ##################
 CC.Linux = mpicc
-CCFLAGS.Linux = 
-LDFLAGS.Linux =
+IOSIG_CFLAGS   = -w -finstrument-functions
+IOSIG_LDFLAGS  = -L${IOSIG_HOME}/src/collect -liosig -Wl,-wrap,fopen,-wrap,fopen64,-wrap,fclose,-wrap,fread,-wrap,fwrite,-wrap,fseek,-wrap,open,-wrap,close,-wrap,read,-wrap,write,-wrap,lseek,-wrap,lseek64,-wrap,open64
+
+CCFLAGS.Linux = ${IOSIG_CFLAGS}
+LDFLAGS.Linux = ${IOSIG_LDFLAGS}
 
 
 ##################
