--- a/src/examples/execution_trace/Makefile.iosig
+++ b/src/examples/execution_trace/Makefile.iosig
@@ -1,12 +1,10 @@
 #!/bin/bash
 
-IOSIG_LIB_PATH = ../../collect
-IOSIG_CFLAGS    += -w -finstrument-functions 
-IOSIG_LDFLAGS   += -L../../collect -liosig 
-IOSIG_LDFLAGS   += -Wl,-wrap,fopen,-wrap,fopen64,-wrap,fclose,-wrap,fread,-wrap,fwrite,-wrap,fseek,-wrap,open,-wrap,close,-wrap,read,-wrap,write,-wrap,lseek,-wrap,lseek64,-wrap,open64
+IOSIG_CFLAGS    = -w -finstrument-functions 
+IOSIG_LDFLAGS   = -L${IOSIG_HOME}/src/collect -liosig -Wl,-wrap,fopen,-wrap,fopen64,-wrap,fclose,-wrap,fread,-wrap,fwrite,-wrap,fseek,-wrap,open,-wrap,close,-wrap,read,-wrap,write,-wrap,lseek,-wrap,lseek64,-wrap,open64
 
-CFLAGS    += ${IOSIG_CFLAGS}
-LDFLAGS   += ${IOSIG_LDFLAGS}
+CFLAGS    = ${IOSIG_CFLAGS}
+LDFLAGS   = ${IOSIG_LDFLAGS}
 
 main: main.o 
 	gcc main.o -o main ${LDFLAGS}
