--- a/src/examples/mpiio_c/Makefile.iosig
+++ b/src/examples/mpiio_c/Makefile.iosig
@@ -1,14 +1,12 @@
 #!/bin/bash
 
-MPI_HOME     = /export/home/yyin/install
 CC           = mpicc
 
-IOSIG_CFLAGS   += -w -finstrument-functions 
-IOSIG_LDFLAGS  += -L../../collect -liosig
-IOSIG_LDFLAGS  += -Wl,-wrap,fopen,-wrap,fopen64,-wrap,fclose,-wrap,fread,-wrap,fwrite,-wrap,fseek,-wrap,open,-wrap,close,-wrap,read,-wrap,write,-wrap,lseek,-wrap,lseek64,-wrap,open64
+IOSIG_CFLAGS   = -w -finstrument-functions 
+IOSIG_LDFLAGS  = -L${IOSIG_HOME}/src/collect -liosig -Wl,-wrap,fopen,-wrap,fopen64,-wrap,fclose,-wrap,fread,-wrap,fwrite,-wrap,fseek,-wrap,open,-wrap,close,-wrap,read,-wrap,write,-wrap,lseek,-wrap,lseek64,-wrap,open64
 
-CFLAGS      += ${IOSIG_CFLAGS}
-LDFLAGS     += ${IOSIG_LDFLAGS}
+CFLAGS      = ${IOSIG_CFLAGS}
+LDFLAGS     = ${IOSIG_LDFLAGS}
 
 EXECS        = example
 
