--- a/src/examples/posix_io_c/Makefile.iosig
+++ b/src/examples/posix_io_c/Makefile.iosig
@@ -1,7 +1,6 @@
 #!/bin/bash
-IOSIG_CFLAGS   += -g -w -finstrument-functions
-IOSIG_LDFLAGS  += -L../../collect -liosig
-IOSIG_LDFLAGS  += -Wl,-wrap,fopen,-wrap,fopen64,-wrap,fclose,-wrap,fread,-wrap,fwrite,-wrap,fseek,-wrap,open,-wrap,close,-wrap,read,-wrap,write,-wrap,lseek,-wrap,lseek64,-wrap,open64
+IOSIG_CFLAGS   = -g -w -finstrument-functions
+IOSIG_LDFLAGS  = -L${IOSIG_HOME}/src/collect -liosig -Wl,-wrap,fopen,-wrap,fopen64,-wrap,fclose,-wrap,fread,-wrap,fwrite,-wrap,fseek,-wrap,open,-wrap,close,-wrap,read,-wrap,write,-wrap,lseek,-wrap,lseek64,-wrap,open64
 
 CFLAGS      += ${IOSIG_CFLAGS}
 LDFLAGS     += ${IOSIG_LDFLAGS}
